syntax = "proto3";

package calculator;
option go_package = "./calculator/calculatorpb";

message Request {
  double first_number = 1;
  double second_number = 2;
}

message Response{
  double result = 1;
}

message PrimeNumberDecompositionRequest{
  int64 number = 1;
}

message  PrimeNumberDecompositionResponse {
  int64  prime_factor = 1;
}

message AverageRequest {
  int64 number = 1;
}

message AverageResponse {
  double result = 1;
}

message MaximumRequest {
  int64 number = 1;
}

message MaximumResponse {
  int64 result = 1;
}

message SquareRootRequest {
  int64 number = 1;
}

message SquareRootResponse {
  double result = 1;
}

service CalculatorService {
  rpc Sum(Request) returns (Response) {};
  rpc Minus(Request) returns (Response) {};
  rpc Multiply(Request) returns (Response) {};
  rpc Divide(Request) returns (Response) {};

  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest)
      returns (stream PrimeNumberDecompositionResponse) {};


  rpc Average(stream AverageRequest) returns (AverageResponse) {};

  rpc Maximum(stream MaximumRequest) returns (stream MaximumResponse) {};

  // error handling
  // this RPC will throw an exception if the sent number is negative
  // The error being sent is of type INVALID_ARGUMENT
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}